Fix tab not centered issue

--- a/services/ui/css/components.css
+++ b/services/ui/css/components.css
@@ -77,7 +77,7 @@
 }
 
 .tab {
-	min-height: 55px;
+	min-height: 1em;
     display: flex;
     flex-direction: column;
 }
